--- a/sandbox-angularjs/styles/demoApp.css
+++ b/sandbox-angularjs/styles/demoApp.css
@@ -6,3 +6,14 @@
     width: 100%;
     z-index: -1;
 }
+
+header {
+    background-color: white;
+    height: 80px;
+    font-size: 32px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    z-index: 0;
+}
