--- a/sandbox-angularjs/styles/demoApp.css
+++ b/sandbox-angularjs/styles/demoApp.css
@@ -11,9 +11,10 @@ header {
     background-color: white;
     height: 80px;
     font-size: 32px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
-    z-index: 0;
+    margin: 10px;
+}
+
+nav {
+    background-color: white;
+    margin: 10px;
 }
