--- a/sandbox-angularjs/styles/demoApp.css
+++ b/sandbox-angularjs/styles/demoApp.css
@@ -18,3 +18,8 @@ nav {
     background-color: white;
     margin: 10px;
 }
+
+#content {
+    background-color: white;
+    margin: 10px 250px 10px 10px;
+}
