Added CSS for footer.

--- a/sandbox-angularjs/styles/demoApp.css
+++ b/sandbox-angularjs/styles/demoApp.css
@@ -23,3 +23,8 @@ nav {
     background-color: white;
     margin: 10px 250px 10px 10px;
 }
+
+footer {
+    background-color: white;
+    margin: 10px;
+}
