--- a/sandbox-angularjs/styles/demoApp.css
+++ b/sandbox-angularjs/styles/demoApp.css
@@ -1,3 +1,8 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 #background {
     background: url('../assets/bkgnd.jpg') no-repeat center center;
     height: 100%;
@@ -8,23 +13,32 @@
 }
 
 header {
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
     height: 80px;
     font-size: 32px;
-    margin: 10px;
+    margin: 20px 20px 5px;
+    padding: 20px 40px;
+}
+
+header h1 {
+    margin: 0;
+    padding: 0;
 }
 
 nav {
     background-color: white;
-    margin: 10px;
+    margin: 5px 20px;
+    padding: 5px 10px;
 }
 
 #content {
     background-color: white;
-    margin: 10px 250px 10px 10px;
+    margin: 5px 250px 5px 20px;
 }
 
 footer {
     background-color: white;
-    margin: 10px;
+    font-size: small;
+    margin: 5px 20px 20px;
 }
