--- a/sandbox-angularjs/styles/demoApp.css
+++ b/sandbox-angularjs/styles/demoApp.css
@@ -1,4 +1,5 @@
-html, body {
+body {
+    background: #BBBBBB;
     margin: 0;
     padding: 0;
 }
@@ -16,7 +17,7 @@ html, body {
 
 header {
     background-color: rgba(0, 0, 0, 0.6);
-    box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
+    box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.9);
         -moz-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
         -webkit-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
     color: white;
@@ -32,7 +33,7 @@ header h1 {
 }
 
 nav {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
         -moz-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
         -webkit-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
@@ -40,8 +41,32 @@ nav {
     padding: 5px 20px;
 }
 
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    overflow: auto;
+    padding: 0;
+}
+
+nav ul li {
+    float: left;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+nav ul li a {
+    display: block;
+    padding-bottom: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    text-decoration: none;
+}
+
+nav ul li a:hover { text-decoration: underline; }
+
 #content {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
         -moz-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
         -webkit-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
@@ -50,11 +75,11 @@ nav {
 }
 
 footer {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
         -moz-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
         -webkit-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
-    font-size: small;
+    font-size: x-small;
     margin: 5px 20px 20px;
     padding: 5px 10px;
     text-align: center;
