--- a/sandbox-angularjs/styles/demoApp.css
+++ b/sandbox-angularjs/styles/demoApp.css
@@ -16,15 +16,15 @@ body {
 }
 
 header {
-    background-color: rgba(0, 0, 0, 0.6);
-    box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.9);
-        -moz-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
-        -webkit-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
+    background-color: rgba(10, 10, 10, 0.8);
+    box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
+        -moz-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
+        -webkit-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
     color: white;
     height: 90px;
     font-size: 32px;
     margin: 20px 20px 5px;
-    padding: 35px 20px 0 40px;
+    padding: 10px 20px 0 40px;
 }
 
 header h1 {
@@ -32,20 +32,17 @@ header h1 {
     padding: 0;
 }
 
-nav {
-    background-color: rgba(255, 255, 255, 0.9);
-    box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
-        -moz-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
-        -webkit-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
-    margin: 0 20px 5px;
-    padding: 5px 20px;
-}
+nav { margin: 0 20px 5px; }
 
 nav ul {
+    background-color: rgba(10, 10, 10, 0.8);
+    box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.8);
+        -moz-box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.8);
+        -webkit-box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.8);
     list-style-type: none;
-    margin: 0;
+    margin: 5px 0 15px;
     overflow: auto;
-    padding: 0;
+    padding: 0 10px;
 }
 
 nav ul li {
@@ -55,6 +52,7 @@ nav ul li {
 }
 
 nav ul li a {
+    color: white;
     display: block;
     padding-bottom: 5px;
     padding-left: 20px;
@@ -63,22 +61,22 @@ nav ul li a {
     text-decoration: none;
 }
 
-nav ul li a:hover { text-decoration: underline; }
+nav ul li a:hover { background-color: #777777; }
 
 #content {
     background-color: rgba(255, 255, 255, 0.9);
-    box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
-        -moz-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
-        -webkit-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
+    box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
+        -moz-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
+        -webkit-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
     margin: 5px 245px 5px 20px;
     padding: 5px 10px;
 }
 
 footer {
     background-color: rgba(255, 255, 255, 0.9);
-    box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
-        -moz-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
-        -webkit-box-shadow: 1px 1px 8px 0px rgba(20, 20, 20, 0.8);
+    box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
+        -moz-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
+        -webkit-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
     font-size: x-small;
     margin: 5px 20px 20px;
     padding: 5px 10px;
