--- a/sandbox-angularjs/styles/demoApp.css
+++ b/sandbox-angularjs/styles/demoApp.css
@@ -58,6 +58,7 @@ nav ul li a {
 }
 
 nav ul li a:hover { background-color: #777777; }
+nav ul li.active { background-color: #606060; }
 
 #sidebar {
     background-color: rgba(255, 255, 255, 0.9);
