Minor layout tweaks.

--- a/sandbox-angularjs/styles/demoApp.css
+++ b/sandbox-angularjs/styles/demoApp.css
@@ -13,7 +13,7 @@ body {
 }
 
 #background #image {
-    background: url('../assets/bkgnd.jpg') no-repeat center center;
+    background: url('../img/bkgnd.jpg') no-repeat center center;
     background-size: cover;
     height: 100%;
     position: fixed;
@@ -32,14 +32,14 @@ body {
 }
 
 header {
-    background-color: rgba(10, 10, 10, 0.8);
+    background-color: rgba(10, 10, 10, 0.9);
     box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
         -moz-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
         -webkit-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
     color: white;
-    font-size: xx-large;
-    height: 90px;
-    margin: 5px 20px;
+    font-size: x-large;
+    height: 60px;
+    margin: 10px 20px 5px;
     padding: 35px 20px 35px 50px;
 }
 
@@ -51,7 +51,7 @@ header * {
 nav { margin: 0 20px 5px; }
 
 nav ul {
-    background-color: rgba(10, 10, 10, 0.8);
+    background-color: rgba(10, 10, 10, 0.9);
     box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.8);
         -moz-box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.8);
         -webkit-box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.8);
@@ -94,7 +94,7 @@ nav ul li.active { background-color: #606060; }
         -moz-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
         -webkit-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
     margin: 5px 245px 5px 20px;
-    padding: 5px 10px;
+    padding: 5px 30px;
 }
 
 footer {
