Added basic directive.

--- a/sandbox-angularjs/partials/home.partial.html
+++ b/sandbox-angularjs/partials/home.partial.html
@@ -12,6 +12,7 @@
         <tr data-ng-repeat="customer in customers | filter: filter">
             <td>{{ customer.name }}</td>
             <td>{{ customer.city }}</td>
+            <td data-home-directive></td>
         </tr>
     </tbody>
 </table>
