Modified data from hard-coded values to values in scope from factory.

--- a/sandbox-angularjs/partials/home.partial.html
+++ b/sandbox-angularjs/partials/home.partial.html
@@ -34,4 +34,4 @@
         text-align: right;
     }
 </style>
-<div data-sample-bar-chart chart-data="[10,20,30,40,50,60,70,80,90]"></div>
+<div data-sample-bar-chart chart-data="customers"></div>
